# omero2pandas

./: README.md  pyproject.toml  setup.py  version.py
.github/workflows/: workflow.yml
omero2pandas/: __init__.py  connect.py  io_tools.py  remote.py  upload.py
