[build-system]
requires = ["setuptools>=61", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "omero2pandas"
description = "OMERO.tables to pandas bridge"
readme = "README.md"
license = {file = "LICENSE.txt"}
dependencies = [
    'omero-py',
    'pandas>2',
    'tqdm',
]
requires-python = ">=3.9"
authors = [
    {name = "Glencoe Software, Inc.", email="info@glencoesoftware.com"},
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Intended Audience :: End Users/Desktop',
    'Programming Language :: Python :: 3',
]


[project.optional-dependencies]
token = ["omero-user-token>=0.3.0"]

[project.urls]
github = "https://github.com/glencoesoftware/omero2pandas"

[tool.setuptools_scm]
