[build-system]
requires = ["setuptools>=61", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "omero2pandas"
description = "OMERO.tables to pandas bridge"
readme = "README.md"
license = {file = "LICENSE.txt"}
authors = [
    {name = "Glencoe Software, Inc.", email="info@glencoesoftware.com"},
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Intended Audience :: End Users/Desktop',
    'Programming Language :: Python :: 3',
]
requires-python = ">=3.9"
dependencies = [
    'omero-py>=5.19.5',
    'pandas>2',
    'tqdm',
]

[project.optional-dependencies]
token = ["omero-user-token>=0.3.0"]
remote = [
    "pyarrow>=19.0.0",
    "tiledb>=0.33.2, <0.34.1",
]

[project.urls]
github = "https://github.com/glencoesoftware/omero2pandas"

[tool.setuptools_scm]
